# memcpp

./: CMakeLists.txt  LICENSE  README.md  alignment.cpp  alloc.cpp
.cache/clangd/index/: alignment.cpp.9C5FC73F7B979873.idx  alignment.hpp.1532A42B614AE99A.idx  alloc.cpp.2F5C8A0F5CC873A5.idx  alloc.hpp.603B83CBC53B8A0C.idx  alloc_test.cpp.F304A1C0A81FFF5C.idx  block.hpp.21B1528842DB07D9.idx
cmake/: memcppconfig.cmake.in
include/: alignment.hpp  alloc.hpp  block.hpp
src/: alignment.cpp  alloc.cpp
test/: alloc_test.cpp  benchmarks.cpp
